--- a/GuiEditBox.cls
+++ b/GuiEditBox.cls
@@ -5540,7 +5540,6 @@ Do While pos <= Len(a$)
         If part$ <> "" Then
         b$ = b$ & part$
         End If
-         'If Right(b$, 1) <> "l" Then Exit Do
         part$ = "S"
         pos = pos + 1
         Do While pos <= Len(a$)
@@ -5567,12 +5566,26 @@ Do While pos <= Len(a$)
         part$ = vbNullString
         
     ElseIf w$ = "{" Then
-
+If word$ <> "" Then
+  Select Case myUcase(word$, True)
+  Case "THEN", "ELSE", "тоте"
+  pos = pos - 4
+  Exit Do
+  Case "ELSE.IF"
+  pos = pos - 7
+  Exit Do
+  Case "аккиыс"
+  pos = pos - 6
+  Exit Do
+  Case "аккиыс.ам"
+  pos = pos - 9
+  Exit Do
+  End Select
+  End If
     
 
-    If part$ <> "" Then
-        b$ = b$ & part$
-        ElseIf LenB(b$) = 0 Then
+    If part$ <> "" Then b$ = b$ & part$
+        If LenB(b$) = 0 Then
         ElseIf Right(b$, 1) <> "l" Then
         Exit Do
         End If
@@ -5801,6 +5814,7 @@ End If
 
 
 End Function
+
 Private Function aheadstatus(a$, Optional srink As Boolean = True, Optional pos As Long = 1) As String 'ok
 Dim b$, part$, w$, Level&, pos2 As Long, word$
 
